--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,33 @@
   color: white;
 }
 
+.container{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+input{
+  width: 50%;
+  height: 30px;
+  border-radius:5px;
+  margin:10px;
+}
+
+button{
+  height: 30px;
+  border-radius:5px;
+  margin:10px;
+  font-size: medium;
+}
+
 ul{
   margin:10px;
+  list-style: none;
+}
+
+li{
+  padding: 10px;
 }
