--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,17 @@
-.App {
-  text-align: center;
+*{
+  background-color: #282c34;
+  color:white
 }
 
-.App-header {
+.App {
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
   background-color: #282c34;
-  min-height: 100vh;
+  color: white;
+  height: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .container{
@@ -19,20 +20,36 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  width: 100%;
 }
 
 input{
-  width: 50%;
-  height: 30px;
+  width: 60%;
+  height: 40px;
   border-radius:5px;
   margin:10px;
+  padding-left:10px;
+  font-size: medium;
+  border:0;
+  background-color:white;
+  color:black
 }
 
 button{
-  height: 30px;
+  width: 20%;
+  height: 40px;
   border-radius:5px;
   margin:10px;
   font-size: medium;
+  padding:0;
+  background-color:rgb(6, 108, 240);
+  color: white;
+  border:0;
+  cursor: pointer;
+}
+
+button:hover{
+  background-color:rgb(4, 96, 218);
 }
 
 ul{
@@ -42,4 +59,16 @@ ul{
 
 li{
   padding: 10px;
+}
+
+a{
+  color:white
+}
+
+span{
+  font-style: italic;
+}
+
+a:visited{
+  color:white
 }
