--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
 }
 
 input{
-  width: 60%;
+  width: 200px;
   height: 40px;
   border-radius:5px;
   margin:10px;
@@ -36,7 +36,7 @@ input{
 }
 
 button{
-  width: 20%;
+  width: 100px;
   height: 40px;
   border-radius:5px;
   margin:10px;
